# Raylib-CMake-Template

./: CMakeLists.txt  CMakelists.txt  README.md
Windows/: app.rc
src/: main.cpp
